@@ -1,3 +1,8 @@
+Mon Dec 20 18:39:02 EST 1999  Mike Welles  <mike@onshore.com>
+
+        * Fixed bug that caused LZW (non) compression to segfault. Added 
+	  warning about LZW compression removed being removed, and why. 
+	
 Tue Dec  7 12:04:47 EST 1999  Mike Welles  <mike@onshore.com>
 
 	* Added patch from Ivo Penzar <ivo.penzar@infolink-software.com>, 
